# Practica2

./: CMakeLists.txt  main.cpp  problema10.cpp  problema10.h  problema12.cpp  problema12.h  problema14.cpp  problema14.h  problema16.cpp  problema16.h  problema2.cpp  problema2.h  problema4.cpp  problema4.h  problema6.cpp  problema6.h  problema8.cpp  problema8.h
